--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exchange-spread-observer",
   "version": "1.0.0",
   "description": "Exchange spread observer application",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -23,14 +24,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ws": "^8.16.0",
-    "winston": "^3.11.0",
+    "axios": "^1.6.5",
+    "node-cron": "^4.2.1",
     "redis": "^4.6.12",
-    "axios": "^1.6.5"
+    "winston": "^3.11.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.5",
     "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
@@ -51,4 +53,3 @@
     "typescript": "^5.9.2"
   }
 }
-
