--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "tsx src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "test": "jest",
     "build": "tsc",
     "test:watch": "jest --watch",
@@ -16,15 +16,10 @@
     "format:check": "prettier --check \"src/**/*.{ts,json,md}\"",
     "type-check": "tsc --noEmit"
   },
-  "keywords": [
-    "exchange",
-    "spread",
-    "observer"
-  ],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "dotenv": "^17.2.3",
     "node-cron": "^4.2.1",
     "redis": "^4.6.12",
     "winston": "^3.11.0",
@@ -50,6 +45,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.2"
   }
 }
