Update environment configuration and Docker setup for improved Redis integration
- Added REDIS_URL to .env.example for better environment variable management.
- Updated docker-compose.yml to utilize .env for environment variables.
- Changed Dockerfile to use Node.js 24.12-alpine for the build process.
- Modified package.json scripts for improved application startup and development experience.
- Enhanced redisClient initialization to support dynamic Redis URL construction.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   redis:
     image: redis:7-alpine
@@ -22,12 +20,11 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: exchange-spread-observer
+    env_file:
+      - .env
     environment:
-      - NODE_ENV=production
       - DOCKER=true
       - LOG_LEVEL=${LOG_LEVEL:-info}
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
     volumes:
       - ./logs:/app/logs
     depends_on:
