--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
+NODE_ENV=
 EXCHANGE_NAME=
+
 EXCHANGE_HTTP_BASE_URL=
 EXCHANGE_WS_BASE_URL=
+
 EXCHANGE_SYMBOL=
 
 REDIS_HOST=
 REDIS_PORT=
+REDIS_URL=
