--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "dev": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "DOTENV_CONFIG_PATH=.env.local tsx watch src/index.ts",
     "test": "jest",
-    "build": "tsc",
+    "build": "tsc && ts-add-js-extension --dir=dist",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
@@ -42,9 +42,8 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "ts-add-js-extension": "^1.6.6",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.2"
   }
